fix so queue/player doesn't break on small screens

--- a/public_static/styles/queue.less
+++ b/public_static/styles/queue.less
@@ -51,7 +51,7 @@
 
         dl {
             display: none;
-            margin: 0 10px 0 0;
+            margin: 0 8px 0 0;
             float: right;
 
             dt {
@@ -121,7 +121,7 @@
 
     #player-controls {
         margin: -8px 0 8px 18px;
-        padding: 0 18px 0 0;
+        padding: 0 8px 0 0;
         width: 69%;
         float: left;
         position: static;
@@ -132,7 +132,7 @@
             margin-top: -6px;
             margin-right: 15px;
             margin-left: 0;
-            font-size: 36px;
+            font-size: 34px;
             padding: 0;
             background-color: transparent;
             color: @white;
